# blbl

./: README.md
.github/workflows/: rust.yml
bili-ticker-buy-rust/: README.md  index.html  package-lock.json  package.json  vite.config.js
bili-ticker-buy-rust/docs/plans/: 2026-03-04-headless-web-server.md
bili-ticker-buy-rust/src/: AdminTokenGatePage.jsx  App.css  App.jsx  index.css  main.jsx
bili-ticker-buy-rust/src-tauri/: Cargo.toml  tauri.conf.json
bili-ticker-buy-rust/src-tauri/data/: history.json  project_history.json  share_presets.json
bili-ticker-buy-rust/src-tauri/src/: api.rs  auth.rs  auth_phone.rs  buy.rs  config.rs  lib.rs  main.rs  order_protocol.rs  share.rs  storage.rs  util.rs
bili-ticker-buy-rust/src-tauri/src/core/: events.rs  storage.rs
bili-ticker-buy-rust/src-tauri/src/headless/: auth.rs  handlers.rs  mod.rs  router.rs  ws.rs
bili-ticker-buy-rust/src-tauri/tests/: order_flow_tests.rs
bili-ticker-buy-rust/src/platform/: apiClient.ts  eventClient.ts  notificationClient.ts  runtime.ts  serverToken.js  serverToken.test.js
bili-ticker-buy-rust/src/share/: SharePhoneLoginPanel.jsx  SharePresetPanel.jsx  ShareTaskPage.jsx  documentScrollMode.js  documentScrollMode.test.js  geetestResult.js  geetestResult.test.js  shareLoginState.js  shareLoginState.test.js  sharePayload.js  sharePresetHelpers.js  sharePresetHelpers.test.js  shareTaskSync.js  shareTaskSync.test.js
bili-ticker-buy-rust/src/task/: manualTaskPayload.js  manualTaskPayload.test.js
bili-ticker-buy-rust/src/utils/: clipboard.js  clipboard.test.js
