[package]
name = "bili-ticker-buy-rust"
version = "0.0.0"
description = "A Bilibili ticket buying tool"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
base64 = "0.21"
rand = "0.8"
qrcode = "0.12"
image = "0.24"
chrono = "0.4"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
md5 = "0.8.0"
sntpc = "0.3.5"
tiny_http = "0.12.0"
urlencoding = "2.1.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
